[tool.poetry]
name = "when2meet"
version = "0.1.0"
description = ""
authors = ["zanwoll <skd03541@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"


[tool.poetry.group.dev.dependencies]
ruff = "0.8.2"
black = "24.10.0"
mypy = "1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py313"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.13
strict = true